--- a/one/navbar.css
+++ b/one/navbar.css
@@ -26,7 +26,7 @@ li a, .btn{
     position: absolute;
     background-color: white;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 .money a{
     border: none;
@@ -44,14 +44,14 @@ li a, .btn{
 .black_overlay{
     display: none;
     position: absolute;
-    top: 0%;
-    left: 0%;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    background-color: #ffffff;
-    z-index:1001;
+    background-color: white;
+    z-index:1001;    /* 数字的大小指明了div的相对层，数字大的在上层 */
     -moz-opacity: 0.8;
-    opacity:.0;
+    opacity:.0;     /*指定了一个元素后面的背景的被覆盖程度*/
     filter: alpha(opacity=80);
 }
 .white_content {
@@ -60,7 +60,7 @@ li a, .btn{
     top: 10%;
     left: 50%;
     background-color: white;
-    z-index:1002; /* 数字的大小指明了div的相对层，数字大的在上层 */
+    z-index:1002;
     overflow: auto;
 }
 .bg{
@@ -79,21 +79,19 @@ p{
     font-size: large;
 }
 .am{
-    margin: 450px 0px 0px;
+    margin: 450px 0 0;
     width: 49px;
     height: 49px;
     float: left;
     border-radius: 50%;
-    background: #0ff;
-    animation: move 7s infinite,color 3.5s infinite;
-    animation-direction: alternate;
+    animation: move 7s infinite,color 3.5s infinite;    /*infinite表示动画重复运行*/
+    animation-direction: alternate;     /*alternate表示动画交替反向运行*/
 }
 .am1{
-    margin: 449px 80px 0px;
+    margin: 449px 80px 0;
     width: 49px;
     height: 49px;
     float: right;
-    background: #0ff;
     animation: rotate 7s infinite,color 3.5s infinite;
     animation-direction: alternate;
 }
@@ -108,6 +106,15 @@ p{
         transform: translate(0,0);
     }
 }
+/*动画旋转效果*/
+@keyframes rotate{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
 @keyframes color{
     0%{
         background-color: red;
@@ -117,13 +124,5 @@ p{
     }
     100%{
         background-color: blue;
-    }
-}
-@keyframes rotate{
-    0%{
-        transform: rotate(0deg);
-    }
-    100%{
-        transform: rotate(360deg);
     }
 }
